' @autogenerated
@startuml
left to right direction
title Clases para scope assignation
class access.SecurityDomain{
uid:string
name:string
level:integer
readAll:boolean
writeAll:boolean
manageAll:boolean
enabled:boolean
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
class access.SecurityScope{
uid:string
resource:string
scope:string
enabled:boolean
kind:SecurityScopeKindOptions
visibility:SecurityScopeVisibilityOptions
version:integer
list()
retrieve()
create()
update()
delete()
disable()
enable()
}
class access.ScopeAssignation{
uid:string
version:integer
list()
retrieve()
create()
update()
delete()
}
access.SecurityDomain "1"  o--  "N*" access.ScopeAssignation: securityDomain
access.SecurityScope "1"  o--  "N*" access.ScopeAssignation: securityScope

footer Generado el %date("dd.MM.yyyy' a las 'HH:mm")
@enduml
